<resources>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="my_mission">My Mission</string>
    <string name="resume">Resume</string>
    <string name="my_internships">My Internships</string>
    <string name="wallet">Wallet</string>
    <string name="referral">Referral</string>
    <string name="attendence_tracker">Attendence Tracker</string>
    <string name="support">Support</string>
    <string name="about_us">About us</string>
    <string name="city">City</string>
    <string name="logout">Logout</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enginnering_technology"><![CDATA[Enginnering & Technology]]></string>
    <string name="travel_hospitality"><![CDATA[Travel & Hospitality]]></string>
    <string name="accounts">Accounts</string>
    <string name="filter">Filter</string>
    <string name="partnerKey">MKVFQ3c8e9faca34246a08c6390addf63971f</string>
    <string name="refer_herody_app_with_your_friends_earn_5_on_ever_earning_made_through_your_referred_friend_hurry_up_rewards_are_for_limited_period"><![CDATA[Refer herody App with your friends & earn 5% on ever earning made through your referred friend. Hurry up Rewards are for limited period.]]></string>
    <string name="appname">Herody</string>
</resources>
