<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/resume"
            android:title="@string/resume" />
        <item
            android:id="@+id/my_Missions"
            android:title="@string/my_mission" />
        <item
            android:id="@+id/my_Interships"
            android:title="@string/my_internships" />
        <item
            android:id="@+id/wallet"
            android:title="@string/wallet" />
        <item
            android:id="@+id/support"
            android:title="@string/support" />
        <item
            android:id="@+id/city"
            android:title="Referrals" />
        <item
            android:id="@+id/about_us2"
            android:title="@string/about_us" />

        <item
            android:id="@+id/logout2"
            android:title="@string/logout" />
        <item
            android:id="@+id/frappProfile"
            android:title="My Profile" />
    </group>

</menu>
