<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold"
        android:paddingTop="20dp"
        android:text="Filter"
        android:paddingLeft="20dp"/>
    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_height="1dp"
        android:background="@color/gray"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
       android:textStyle="bold"
        android:paddingTop="20dp"
        android:text="Work Place"
        android:paddingLeft="10dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:orientation="horizontal">


<ToggleButton
    android:minHeight="0dp"
    android:height="30dp"
    app:theme="@style/button"
    android:background="@drawable/selectorforfilter"
    android:layout_width="wrap_content"
    android:textOff="Office"
    android:textOn="Office"
    android:id="@+id/Filter_Office"
    android:layout_height="wrap_content"
    android:layout_marginStart="20dp" />


        <ToggleButton

            android:minHeight="0dp"
            android:height="30dp"
            app:theme="@style/button"
            android:background="@drawable/selectorforfilter"
            android:layout_width="wrap_content"
            android:textOff="Campus"
            android:textOn="Campus"
            android:id="@+id/Filter_Campus"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp" />

        <ToggleButton

            android:minHeight="0dp"
            android:height="30dp"
            app:theme="@style/button"
            android:background="@drawable/selectorforfilter"
            android:layout_width="wrap_content"
            android:textOff="Home"
            android:textOn="Home"
            android:id="@+id/Filter_Home"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp" />
    </LinearLayout>
    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:paddingTop="20dp"
        android:textStyle="bold"
        android:text="Category"
        android:paddingLeft="10dp"/>

    <HorizontalScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="20dp"
            android:paddingBottom="30dp"
            android:paddingTop="40dp">

            <ToggleButton
                android:minHeight="0dp"
                android:height="30dp"
                android:width="220dp"
                app:theme="@style/button"
                android:background="@drawable/selector_for_filterbottom"
                android:layout_width="wrap_content"
                android:textOff="@string/enginnering_technology"
                android:textOn="@string/enginnering_technology"
                android:id="@+id/Filter_Engineering"
                android:layout_height="wrap_content" />
            <ToggleButton

                android:minHeight="0dp"
                android:height="30dp"
                app:theme="@style/button"
                android:background="@drawable/selector_for_filterbottom"
                android:layout_width="wrap_content"
                android:textOff="Finance"
                android:textOn="Finance"
                android:id="@+id/Filter_Finance"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp" />
            <ToggleButton
             android:width="120dp"
                android:minHeight="0dp"
                android:height="30dp"
                app:theme="@style/button"
                android:layout_width="wrap_content"
                android:textOff="Operations"
                android:background="@drawable/selector_for_filterbottom"
                android:textOn="Operations"
                android:id="@+id/Filter_operations"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp" />
            <ToggleButton
                android:minHeight="0dp"
                android:height="30dp"
                android:width="180dp"
                app:theme="@style/button"
                android:layout_width="wrap_content"
                android:textOff="@string/travel_hospitality"
                android:background="@drawable/selector_for_filterbottom"
                android:textOn="@string/travel_hospitality"
                android:id="@+id/Filter_travel_hospital"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp" />
            <ToggleButton

                android:minHeight="0dp"
                android:height="30dp"
                app:theme="@style/button"
                android:layout_width="wrap_content"
                android:textOff="@string/accounts"
                android:background="@drawable/selector_for_filterbottom"
                android:textOn="@string/accounts"
                android:id="@+id/Filter_accounts"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp" />
        </LinearLayout>
    </HorizontalScrollView>
    <RelativeLayout
        android:paddingTop="20dp"
        android:paddingBottom="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="Cancel"
            android:textStyle="bold"
            android:padding="10dp"/>

        <CheckBox
            android:paddingTop="25dp"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>

</LinearLayout>